# SupplyLink-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth_tables.py  002_phase_2_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  companies.py  messages.py  products.py  reviews.py  rfqs.py  router.py
backend/app/core/: exceptions.py  security.py
backend/app/domain/: enums.py
backend/app/domain/models/: __init__.py
backend/app/domain/repositories/: base.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/database/repositories/: __init__.py
backend/app/schemas/: __init__.py  auth.py  common.py  company.py  message.py  product.py  review.py  rfq.py
backend/app/services/: auth_service.py  company_service.py  message_service.py  product_service.py  review_service.py  rfq_service.py
docs/: architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/dashboard/analytics/: page.tsx
frontend/src/app/(dashboard)/dashboard/messages/: page.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/lib/: api-client.ts
(+3 files in other folders)
